Memperbaiki Tugas Slicing Web

--- a/css/style-homeselect.css
+++ b/css/style-homeselect.css
@@ -14,7 +14,7 @@
 }
 
 .navbar .nav-detail .burger-menu {
-  margin-left: 20px;
+  padding-left: 40px;
 }
 .navbar .nav-detail img {
   width: 30px;
